--- a/cstrike/addons/amxmodx/configs/plugins-rebb.ini
+++ b/cstrike/addons/amxmodx/configs/plugins-rebb.ini
@@ -1,6 +1,9 @@
 ; Primary plugin
 ReBB_Core.amxx debug
 
+; Human Weapon
+ReBB_Gun.amxx debug
+
 ; Zombie Class
 ReBB_Zombie_Default.amxx debug
 ReBB_Zombie_Tank.amxx debug
