--- a/cstrike/addons/amxmodx/configs/plugins-rebb.ini
+++ b/cstrike/addons/amxmodx/configs/plugins-rebb.ini
@@ -1,6 +1,18 @@
 ; Primary plugin
 ReBB_Core.amxx debug
 
+; Sound plugin
+ReBB_Sounds.amxx debug
+
+; Grab plugin
+ReBB_Grab_Blocks.amxx debug
+
+; Lock Blocks plugin
+ReBB_Lock_Blocks.amxx debug
+
+; Hud Movers plugin
+ReBB_Hud_Movers.amxx debug
+
 ; Human Weapon
 ReBB_Gun.amxx debug
 
