Core uprgade and plugins in mod. Edit syntax, adding native, updating documentation and api

--- a/cstrike/addons/amxmodx/configs/ReBaseBuilder/rebb_sounds.ini
+++ b/cstrike/addons/amxmodx/configs/ReBaseBuilder/rebb_sounds.ini
@@ -25,10 +25,13 @@
 	deploy = ""
 	hitwall = "ReBaseBuilder/zombie_knife/zombie_miss1.wav"
 
-[other]
-	build = "ReBaseBuilder/other/phase_build.wav"
-	prep = "ReBaseBuilder/other/phase_prep.wav"
-	round_start = "ReBaseBuilder/other/round_start.wav"
-	infection = "ReBaseBuilder/other/infection.wav"
+[game_events]
+	build_event = "ReBaseBuilder/game_events/phase_build.wav"
+	prep_event = "ReBaseBuilder/game_events/phase_prep.wav"
+	round_start = "ReBaseBuilder/game_events/round_start.wav"
+	infection_event = "ReBaseBuilder/game_events/infection.wav"
+
+[misc_sound]
 	block_grab = "ReBaseBuilder/other/block_grab.wav"
 	block_drop = "ReBaseBuilder/other/block_drop.wav"
+	
