Admin Plugin. Gun, Sound, Core
+ Admin plugin
* fix block grab sound
* fix gun menu
+ forward rebb_grab_block(id);
+ native rebb_get_owned_ent(id);
+ stock log_rebb
* fix error team zombie fo spawn

--- a/cstrike/addons/amxmodx/configs/plugins-rebb.ini
+++ b/cstrike/addons/amxmodx/configs/plugins-rebb.ini
@@ -10,6 +10,9 @@ ReBB_Grab_Blocks.amxx debug
 ; Lock Blocks plugin
 ReBB_Lock_Blocks.amxx debug
 
+; Admin plugin
+ReBB_Admin.amxx debug
+
 ; Hud Movers plugin
 ReBB_Hud_Movers.amxx debug
 
