--- a/cstrike/addons/amxmodx/configs/ReBaseBuilder/rebb_sounds.ini
+++ b/cstrike/addons/amxmodx/configs/ReBaseBuilder/rebb_sounds.ini
@@ -1,5 +1,5 @@
-[builders_win]
-	ReBaseBuilder/builders_win/win_builders.wav
+[humans_win]
+	ReBaseBuilder/humans_win/win_builders.wav
 
 [zombie_win]
 	ReBaseBuilder/zombie_win/win_zombies.wav
