--- a/cstrike/addons/amxmodx/configs/plugins-rebb.ini
+++ b/cstrike/addons/amxmodx/configs/plugins-rebb.ini
@@ -1,24 +1,21 @@
-; Primary plugin
-ReBB_Core.amxx debug
+; Core
+rebb_core.amxx debug
 
 ; Sound plugin
-ReBB_Sounds.amxx debug
+rebb_sounds.amxx debug
 
 ; Grab plugin
-ReBB_Grab_Blocks.amxx debug
+rebb_grab_blocks.amxx debug
 
 ; Lock Blocks plugin
-ReBB_Lock_Blocks.amxx debug
-
-; Admin plugin
-ReBB_Admin.amxx debug
+rebb_lock_blocks.amxx debug
 
 ; Hud Movers plugin
-ReBB_Hud_Movers.amxx debug
+rebb_hud_movers.amxx debug
 
 ; Human Weapon
 ReBB_Gun.amxx debug
 
-; Zombie Class
-ReBB_Zombie_Default.amxx debug
-ReBB_Zombie_Tank.amxx debug
+; Zombie Classes
+rebb_zombie_default.amxx debug
+rebb_zombie_tank.amxx debug
