--- a/cstrike/addons/amxmodx/configs/plugins-rebb.ini
+++ b/cstrike/addons/amxmodx/configs/plugins-rebb.ini
@@ -1,19 +1,14 @@
 ; Core
 rebb_core.amxx debug
 
-; Sound plugin
+; Addons
+rebb_admin.amxx debug
 rebb_sounds.amxx debug
-
-; Grab plugin
 rebb_grab_blocks.amxx debug
-
-; Lock Blocks plugin
 rebb_lock_blocks.amxx debug
-
-; Hud Movers plugin
 rebb_hud_movers.amxx debug
 
-; Human Weapon
+; Human Weapons
 ReBB_Gun.amxx debug
 
 ; Zombie Classes
