Fix + Colore Mode

--- a/cstrike/addons/amxmodx/configs/plugins-rebb.ini
+++ b/cstrike/addons/amxmodx/configs/plugins-rebb.ini
@@ -3,13 +3,14 @@ rebb_core.amxx debug
 
 ; Addons
 rebb_admin.amxx debug
-rebb_sounds.amxx debug
-rebb_grab_blocks.amxx debug
 rebb_lock_blocks.amxx debug
+rebb_grab_blocks.amxx debug
 rebb_hud_movers.amxx debug
+rebb_colore_mode.amxx debug
+rebb_sounds.amxx debug
 
 ; Human Weapons
-ReBB_Gun.amxx debug
+rebb_gun.amxx debug
 
 ; Zombie Classes
 rebb_zombie_default.amxx debug
